--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "chai": "^4.2.0",
+    "ethereumjs-util": "^6.1.0",
     "openzeppelin-solidity": "^2.3.0",
     "web3": "^1.2.1"
   }
